# a2a-rust

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: proto-first-design.md
examples/: echo_server.rs  ping_client.rs
scripts/: check.sh  install-git-hooks.sh
src/: error.rs  jsonrpc.rs  lib.rs  store.rs
src/client/: api.rs  discovery.rs  mod.rs
src/server/: handler.rs  jsonrpc.rs  mod.rs  rest.rs  router.rs  streaming.rs
src/types/: agent_card.rs  agent_id.rs  auth.rs  message.rs  mod.rs  push.rs  requests.rs  responses.rs  security.rs  task.rs
tests/: client_integration.rs  client_wiremock.rs  server_integration.rs  spec_examples.rs
